Use local mysql database

--- a/.env
+++ b/.env
@@ -14,11 +14,11 @@ LOG_LEVEL=debug
 # DB_USERNAME=root
 # DB_PASSWORD=
 DB_CONNECTION=mysql
-DB_HOST=34.131.141.78
-DB_PORT=3306
-DB_DATABASE=Gaurav
+DB_HOST=127.0.0.1
+DB_PORT=8889
+DB_DATABASE=onlyBees1
 DB_USERNAME=root
-DB_PASSWORD=pakmachimm0n
+DB_PASSWORD=root
 
 
 BROADCAST_DRIVER=log
